Version 0.3.7 2009-
-------------
x Managing transformation from Unicode to local with unsupported characters

Version 0.3.6 2009-01-19
-------------
+ HTML protocol basic stuff
+ HTTP protocol helpers
x Crash in Ztring::Trim()
x Code cleanup

Version 0.3.5 2008-12-09
-------------
+ mipsel CPU support
+ Better Linux integration
+ rpm stuff (thanks to oc2pus http://packman.links2linux.org)
+ deb stuff
x Code cleanup

Version 0.3.4.0 2008-10-17
---------------
x some size of returned value problems in Ztring
x Bug in FileName.cpp

Version 0.3.3.9 2008-09-12
---------------
+ Sparc compatibility
x MacOS X wchar_t stuff

Version 0.3.3.8 2008-08-22
---------------
x UTF-16 parsing under Linux

Version 0.3.3.7 2008-06-13
---------------
+ MinGW compatibility

Version 0.3.3.6 2008-05-30
---------------
+ MSVC2008 project files

Version 0.3.3.5 2008-05-16
---------------
x Ztring: Problem with UTF-8 locale
x xxxBSD compatibility

Version 0.3.3.4 2008-04-26
---------------
x #1946749, Ztring: From_UTF16BE - endless loop

Version 0.3.3.3 2008-04-12
---------------
+ Adding some classes for speed improvement

Version 0.3.3.2 2008-03-28
---------------
x On some systems, if a string is not a number, the returned number from string-->number conversion is undetermined
x Non-unicode version: invalid read with assign()

Version 0.3.3.1 2008-03-14
---------------
+ Basic support of threads

Version 0.3.3.0 2008-02-29
---------------
+ Base64 encode/decode
+ File::Created() and File::Modified()
x Trim() problem

Version 0.3.2.6 2008-02-09
---------------
x Was not seeking after EOF
x Win9X does not support shared reading, do not use it if Win9X

Version 0.3.2.5 2008-02-01
---------------
+ Linux/MacOS: support of 2GiB+ files
x File: Re-enabled shared reading
x Better handling of Floating point to string

Version 0.3.2.4 2008-01-09
---------------
+ Ztring::From_GUID()
x small bugfixes

Version 0.3.2.3 2007-12-10
---------------
x small bugfixes

Version 0.3.2.2 2007-11-02